@@ -12,6 +12,14 @@ Post v23.09.0
   - Support CIDR based MAC binding aging threshold. See ovn-nb(5) for
     'mac_binding_age_threshold' for more details.
   - ovn-northd-ddlog has been removed.
+  - OVN Interconnection:
+    * INB provides basic feedback to the CMS about the ISB changes
+      handling status.
+    * IC_NB_Global now have "nb_ic_cfg" and "sb_ic_cfg" columns for
+      for ISB informational status.
+    * IC_SB_Global now have "nb_ic_cfg" column for ISB informational status.
+    * Availability_Zone now have "nb_ic_cfg" column for local AZ
+      informational status.
 
 OVN v23.09.0 - 15 Sep 2023
 --------------------------
